--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,14 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3307/petstore?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&createDatabaseIfNotExist=true
-spring.datasource.username=root
+spring.datasource.url=jdbc:h2:mem:petstore;MODE=MySQL;DATABASE_TO_LOWER=TRUE;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=sa
 spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-# optional but harmless to be explicit with Hibernate 6:
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-# optional explicit driver:
-# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Set SPRING_PROFILES_ACTIVE=mysql to connect to an external MySQL database using
+# the configuration in application-mysql.properties.
